# cosmic-connect-desktop-app

./: .gitignore  .gitmodules  .sync-config.yaml  BUILD_FIX_SUMMARY.md  CAMERA_FIX_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FINAL_CHANGES_NEEDED.md  FIX_SUMMARY.md  IMPLEMENTATION_GUIDE.md  ISSUES_TO_CLOSE.md  PROJECT_STATUS.md  README.md  UI_REVIEW.md  deny.toml  flake.nix  init-project.sh  io.github.olafkfreund.CosmicExtConnect.service  justfile  notification_fix_snippet.rs  run-local-test.sh  test-config.toml
.claude/skills/: install.sh
.github/: ISSUE_33_PLAN.md
.github/workflows/: ci.yml
aur/: .SRCINFO  PKGBUILD  README.md  SUBMITTING.md  cosmic-ext-connect-daemon.service  cosmic-ext-connect-daemon.service.patch  cosmic-ext-connect.install
cosmic-applet-connect/: Cargo.toml
cosmic-applet-connect/data/: cosmic-applet-connect.desktop
cosmic-applet-connect/src/: dbus_client.rs  main.rs  messages.rs
cosmic-applet-kdeconnect/: Cargo.toml
cosmic-applet-kdeconnect/src/: dbus_client.rs  main.rs
cosmic-connect/: Cargo.toml
cosmic-connect-core/: Cargo.toml
cosmic-connect-core/src/: device.rs  error.rs  packet.rs  payload.rs
cosmic-connect-core/tests/: integration_tests.rs
cosmic-connect-daemon/: Cargo.toml  build.rs
cosmic-connect-daemon/src/: config.rs  cosmic_notifications.rs  dbus.rs  desktop_icons.rs  diagnostics.rs  error_handler.rs  main.rs  notification_image.rs  notification_listener.rs
cosmic-connect-daemon/tests/: plugin_integration_tests.rs
cosmic-connect-manager/src/: dbus_client.rs  main.rs
cosmic-connect-protocol/: Cargo.toml
cosmic-connect-protocol/src/: bluetooth_connection_manager.rs  device.rs  error.rs  lib.rs  recovery_coordinator.rs  resource_manager.rs  transport_manager.rs
cosmic-connect-protocol/tests/: error_injection.rs  integration_tests.rs
cosmic-connect/src/: main.rs  notifications.rs
cosmic-display-stream/: Cargo.toml
cosmic-display-stream/src/: capture.rs  encoder.rs  error.rs  input.rs  lib.rs  pipewire.rs  streaming.rs
cosmic-ext-applet-connect/: Cargo.toml
cosmic-ext-applet-connect/data/: cosmic-ext-applet-connect.desktop
cosmic-ext-applet-connect/src/: dbus_client.rs  lib.rs  main.rs  onboarding_config.rs  pinned_devices_config.rs
cosmic-ext-applet-connect/src/state/: device.rs
cosmic-ext-applet-connect/src/views/: device.rs
cosmic-ext-connect-daemon/: Cargo.toml  cosmic-ext-connect-daemon.service
cosmic-ext-connect-daemon/src/: config.rs  cosmic_notifications.rs  dbus.rs  desktop_icons.rs  device_config.rs  error_handler.rs  main.rs  notification_listener.rs
cosmic-ext-connect-daemon/tests/: networkshare_tests.rs  open_interface_tests.md  plugin_integration_tests.rs
cosmic-ext-connect-manager/: Cargo.toml
cosmic-ext-connect-manager/src/: dbus_client.rs  main.rs
cosmic-ext-connect-protocol/: Cargo.toml
cosmic-ext-connect-protocol/examples/: test_capture.rs  test_streaming.rs  test_vnc_server.rs
cosmic-ext-connect-protocol/src/: bluetooth_connection_manager.rs  device.rs  error.rs  fs_utils.rs  lib.rs  packet.rs  payload.rs  recovery_coordinator.rs  resource_manager.rs  test_utils.rs
cosmic-ext-connect-protocol/tests/: error_injection.rs  integration_tests.rs  transport_integration_tests.rs
cosmic-ext-display-stream/: Cargo.toml  README.md
cosmic-ext-display-stream/src/: capture.rs  encoder.rs  gbm_devices.rs  input.rs  lib.rs  streaming.rs
cosmic-ext-messages/: Cargo.toml
cosmic-ext-messages-popup/: Cargo.toml
cosmic-ext-messages-popup/data/: io.github.olafkfreund.CosmicExtMessagesPopup.desktop
cosmic-ext-messages-popup/src/: app.rs  config.rs  dbus.rs  gtk_webview.rs  main.rs  notification.rs  webview.rs
cosmic-ext-messages/src/: main.rs
cosmic-kdeconnect/src/: main.rs
cosmic-messages-popup/: Cargo.toml
cosmic-messages-popup/src/: app.rs  config.rs  dbus.rs  gtk_webview.rs  main.rs  notification.rs  webview.rs
dbus/: README.md  io.github.olafkfreund.CosmicExtPhoneAuth.conf  io.github.olafkfreund.CosmicExtPhoneAuth.service  io.github.olafkfreund.CosmicExtPhoneAuth.xml
dbus/polkit/: io.github.olafkfreund.CosmicExtPhoneAuth.policy
docs/: ARCHITECTURE.md  AUTOMATED_TESTING.md  CONTRIBUTING.md  DEBUGGING.md  DOCUMENTATION_INDEX.md  ERROR_HANDLING.md  Home.md  INSTALL.md  ISSUE_42_PROGRESS.md  LOCAL_TESTING_GUIDE.md  NIXOS_INSTALLATION.md  NOTIFICATION_PROTOCOL.md  PLUGIN_TESTING_GUIDE.md  PLUGIN_TRANSPORT_COMPATIBILITY.md  PROTOCOL_AUDIT.md  README.md  RICH_NOTIFICATIONS.md  TRANSPORT_LAYER.md  TROUBLESHOOTING.md  USER_GUIDE.md  WIKI_SETUP.md  cosmic-phone-auth-guide.md  issue-52-fix.md
flatpak/: FLATPAK.md  README.md  io.github.olafkfreund.CosmicExtConnect.Applet.desktop  io.github.olafkfreund.CosmicExtConnect.desktop  io.github.olafkfreund.CosmicExtConnect.metainfo.xml  io.github.olafkfreund.CosmicExtConnect.yml
kdeconnect-protocol/: Cargo.toml
nix/: README.md  module.md  module.nix  package.nix  tests.nix
nix/modules/: README.md  (+1 more)
scripts/: README.md  test-plugins.sh
tools/: SYNC_REPOS_README.md  sync-repos-skill.md  sync-repos.py
(+183 files in other folders)
