[package]
name = "cosmic-ext-connect-manager"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "COSMIC Connect manager window application for COSMIC Desktop"

[dependencies]
libcosmic = { workspace = true, features = ["winit"] }
cosmic-ext-connect-protocol = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
zbus = { workspace = true }
futures = { workspace = true }
ashpd = { workspace = true }
arboard = "3.4"
dirs = "5.0"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "cosmic-ext-connect-manager"
path = "src/main.rs"
