[package]
name = "cosmic-ext-messages"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web-based messaging popup for COSMIC Desktop"

[dependencies]
libcosmic = { workspace = true, default-features = true }
wry = "0.47"
zbus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
